--- a/.github/workflows/termcheckin.yml
+++ b/.github/workflows/termcheckin.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           BIN_URL: ${{ secrets.BIN_URL }}
         run: |
-          curl -L -o termcheckin.exe $BIN_URL
+          curl -L -o termcheckin.exe $env:BIN_URL
           ./termcheckin.exe
           TIME=$(TZ=Asia/Shanghai date "+%Y-%m-%d %H:%M")
           echo "$TIME" | cat - time.log > temp && mv temp time.log
